Version 1.14 - 2017-11-09
* BUG#2443 The endorsement cancel recalculate the loan amortization table
* BUG#6765 Better views in loan related endorsements
* BUG#6523 Properly handle removing a loan which is not covered by all options

Version 1.12 - 2017-04-28

Version 1.10 - 2016-11-02

Version 1.8 - 2016-07-06
* FEA#0000 Rewrite loan share endorsement to leverage latest technical tools
* FEA#0000 Add field on loan to get endorsement balance at last endorsement

Version 1.6 - 2015-12-23
* FEA#0000 Add Add / Remove loans endorsement
* FEA#0000 Add Endorsement for loan increments modifications at any date

Version 1.4 - 2015-05-29

Version 1.3 - 2015-01-22
* FEA#0000 Properly manage capital_per_mil extra premium endorsement
* FEA#0000 Add loan share endorsement
* FEA#0000 Allow to select contracts to recalculate
* FEA#0000 Allow to preview new payments
* FEA#0000 Add basic loan endorsement
* FEA#0000 Module creation